# rust-amplicons

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs
tests/: tests.rs
tests/data/: samples_good.tsv
