[package]
name = "myfq"
version = "0.1.0"
edition = "2021"
authors = ["Johann Peterson<johann.peterson@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
itertools = "0.12.0"
serde = "1.0.195"

[profile.release]
debug = true
